2nd tab: Fixed an issue where the biker wouldn't appear to run out of energy until the thermal chunks had traveled away.
1st tab: Removed the feature where the burner disables half of the control slider when a max or min temperature is reached.
1st tab: Made the energy chunks go into or come out of the burner, rather than fading in or out.
2nd tab: Made "hidden" energy chunks in the generator appear partially faded.
# 0.00.28 (71322) Dec 14, 2012
12/14/12 Deploying for review by design team.
2nd tab: Added "hidden" energy chunks to the generator so that the mechanical chunks don't look like they disappear.
2nd tab: Made the amount of energy produced, converted, and consumed consistent across all energy systems.
2nd tab: New biker image that includes a chain.
2nd tab: Scaled solar panel to not overlap with beaker or biker.
2nd tab: Added occasional emission of thermal energy from bicycle wheel.
# 0.00.27 (70285) Nov 13, 2012
11/13/12 Deploying for review by design team.
2nd tab: Made Reset All turn off energy chunks.
# 0.00.26 (70283) Nov 13, 2012
11/13/12 Deploying for review by the design team.
2nd tab: Added Reset All functionality.
2nd tab: Made the beaker temperature reset when swapped out.
2nd tab: Moved the energy users left a bit to make room for expansion of the "Forms of Energy" panel when translated.
2nd tab: Made the energy chunks that go through the fluorescent light bulb transition directly from electrical to light (no thermal phase).
2nd tab: Made the thermal energy chunks spread out better on the filament in the incandescent light bulb.
2nd tab: Made the beaker temperature go up more rapidly and get closer to the boiling point.
2nd tab: Made the energy chunks radiated from the beaker be behind the front of the beaker but in front of the back of the beaker.
2nd tab: Made the energy chunks radiated from the beaker be fully opaque, rather than faded in some instance.