@@ -1,3 +1,4 @@
+1st tab: Implemented first attempt at boiling, where the water starts exchanging all of its energy beyond the boiling temperature with the air.
 2nd tab: Fixed an issue where the biker wouldn't appear to run out of energy until the thermal chunks had traveled away.
 1st tab: Removed the feature where the burner disables half of the control slider when a max or min temperature is reached.
 1st tab: Made the energy chunks go into or come out of the burner, rather than fading in or out.
